--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,6 +1,6 @@
 {% extends 'portfolio/base.html' %}
 {% block content %}
-<h1>Hasses hemsida</h1>
+<h1>Welcome to Hasse's homepage</h1>
 
 {% load static %}
 
