--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="http://glastar.se" target="_blank">Glastar</a>
           </li>
           <li>
-            <a role="button" href="{% url 'blog:all_blogs' %}" class="btn btn-primary">Blog</a>
+            <a role="button" href="{% url 'blog:all_blogs' %}" class="btn btn-primary">Python-Blog</a>
           </li>
         </ul>
       </div>
